--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PQ'
 - !lcsh 'Spanish fiction'
+- GITenberg
 title: El cuarto poder
 url: http://www.gutenberg.org/ebooks/24601
